<resources>
    <string name="app_name">Android Photo Album</string>

    <string name="action_add">Add</string>
    <string name="action_delete">Delete</string>
    <string name="action_edit_album">Rename</string>
    <string name="action_help">Help</string>
    <string name="action_options">Options</string>
    <string name="action_search">Search</string>
    <string name="action_settings">Settings</string>

    <string name="button_save">Save</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_choose_image">Choose a Image File</string>
    <string name="button_choose_tag">Choose a Tag Type</string>
    <string name="button_ok">OK</string>

    <string name="title_add_album">Add New Album</string>
    <string name="title_add_photo">Add New Photo</string>
    <string name="title_add_tag">Add New Tag</string>

    <string name="hint_enter_album_name">Enter Album Name</string>
    <string name="hint_enter_photo_name">Enter Photo Name</string>
    <string name="hint_enter_tag_value">Enter Tag Value</string>

    <string name="tag_type_person">PERSON</string>
    <string name="tag_type_location">LOCATION</string>

    <string name="confirm_remove_album">Remove selected albums?</string>

</resources>
